3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/plugins.c: Return an empty string if an object has no message. This
   makes Object.Message() always return a string object, which removes the
   need for special case code to handle empty messages.
include/sproto.h, server/monster.c: Declare parameter of communicate() as
   "const".
Andreas Kirschbaum 2005-11-09

Implement new functions for the Python plugin: Object.WeightLimit,
Object.InsertInto(Object), Object.NamePl. Change Object.Name to set both name
and name_pl. This should prevents scripts from failing to set name_pl.
--
plugins/cfanim/include/cfanim_proto.h, plugins/common/include/plugin_common.h:
   Add prototypes.
plugins/cfpython/cfpython_object.c: Add callback functions for new Python
   functions.
plugins/cfpython/include/cfpython_object_private.h: Add prototypes for
   callback functions. Add callback functions to Python object descriptors.
plugins/common/plugin_common.c: Add missing helper functions.
Andreas Kirschbaum 2005-11-09

server/shop.c: When we are counting unpaid items and their values, to check
if a player may leave a shop, make certain that we count all of them, and
don't stop when we have dropped into a container (such as a spellbook)
Brendan Lally 2005-11-09

plugins/cfpython/cfpython.c: Add missing 'PyType_Ready' calls for map and player,
 failure to do so crashes with Python objects destructors set to 0.
Ryo 2005-11-07

server/spell_effect.c: fix WoR not executing on cursed ground with WIZCAST set.
Ryo 2005-11-06

server/skills.c: In do_throw() abort processing if the thrown object was
   destroyed before it gets its first move.
Andreas Kirschbaum 2005-11-06
